IRON-72 IRON-73 * Add AzureBlob certifiacate data protection. * Add Redis caching.

--- a/settings.yaml
+++ b/settings.yaml
@@ -4,6 +4,10 @@ IroncladDecoratorService:
       settings-key: IroncladDecoratorService-LogsConnString
       types:
         - AzureTableStorage
+    DataProtectionConnString:
+      settings-key: IroncladDecoratorService-DataProtectionConnString
+    RedisConnString:
+      settings-key: IroncladDecoratorService-RedisConnString
   LifetimeSettings:
     settings-key: IroncladDecoratorService-LifetimeSettings
     types:
