--- a/src/Lykke.Service.IroncladDecorator/Lykke.Service.IroncladDecorator.csproj
+++ b/src/Lykke.Service.IroncladDecorator/Lykke.Service.IroncladDecorator.csproj
@@ -28,20 +28,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.AzureStorage" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lykke.Service.IroncladDecorator.AzureRepositories\Lykke.Service.IroncladDecorator.AzureRepositories.csproj" />
     <ProjectReference Include="..\Lykke.Service.IroncladDecorator.Domain\Lykke.Service.IroncladDecorator.Domain.csproj" />
     <ProjectReference Include="..\Lykke.Service.IroncladDecorator.DomainServices\Lykke.Service.IroncladDecorator.DomainServices.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="UserSession\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
     <ItemGroup>
