--- a/tests/Lykke.Service.IroncladDecorator.Tests/Lykke.Service.IroncladDecorator.Tests.csproj
+++ b/tests/Lykke.Service.IroncladDecorator.Tests/Lykke.Service.IroncladDecorator.Tests.csproj
@@ -4,9 +4,13 @@
     <Version>1.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Lykke.Service.IroncladDecorator\Lykke.Service.IroncladDecorator.csproj" />
   </ItemGroup>
 </Project>
